--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-bootstrap-table-next": "^4.0.3"
   }
 }
