--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
     "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@material/switch": "^13.0.0",
     "react-bootstrap-table-next": "^4.0.3"
   }
 }
