--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
     "react-table": "^7.7.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "react-bootstrap-table-next": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "@material/switch": "^13.0.0",
-    "react-bootstrap-table-next": "^4.0.3"
+    "@material/switch": "^13.0.0"
   }
 }
