--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
-    "firebase": "^9.1.0",
+    "firebase": "^9.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
     "react-table": "^7.7.0",
-    "web-vitals": "^1.1.2",
-    "react-bootstrap-table-next": "^4.0.3"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
