--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
     "react-table": "^7.7.0",
-    "web-vitals": "^1.1.2",
-    "react-bootstrap-table-next": "^4.0.3"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
