--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
