--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
     "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
     "react-table": "^7.7.0",
+    "segmented-control": "^0.1.17",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
